--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "array-unique": "^0.3.2",
     "axios": "^0.19.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
+    "shuffle-array": "^1.0.1",
     "uuid": "^3.3.3"
   },
   "scripts": {
